--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,43 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:launchMode="singleTask"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".Result"
+            android:parentActivityName=".Question1"></activity>
+        <activity android:name=".Question16"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question15"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question14"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question13"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question12"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question11"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question10"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question9"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question8"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question7"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question6"
+        android:parentActivityName=".Question1"/>
+        <activity android:name=".Question6b"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question5"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question4"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question3"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question2"
+            android:parentActivityName=".Question1"/>
+        <activity android:name=".Question1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
